@startuml
' -------------------------------------------------------------------------------
' CommerceSphere Enterprise Suite :: Relational Data Schema
' ------------------------------------------------------------------------------
' This PlantUML file documents the core database entities and their relationships
' for the monolithic CommerceSphere Enterprise Suite platform.
'
' Legend:
'   - PK : Primary Key
'   - FK : Foreign Key
'   - NN : Not Null
'   - UQ : Unique
' -------------------------------------------------------------------------------

hide circle
skinparam {
    linetype ortho
    shadowing false
    backgroundColor #ffffff
    database {
        BackgroundColor #f5f5f5
        BorderColor #7d8491
        FontColor     #2e3d49
    }
    entity {
        BackgroundColor #ffffff
        BorderColor #7d8491
        FontColor     #2e3d49
    }
}

' ==============================================================================
' USER & ACCOUNT DOMAINS
' ==============================================================================

entity account {
    + id : BIGINT {PK}
    name : VARCHAR(150) {NN}
    parent_account_id : BIGINT {FK}
    billing_address_id : BIGINT {FK}
    shipping_address_id : BIGINT {FK}
    status : VARCHAR(32) {NN}
    created_at : TIMESTAMP {NN}
    updated_at : TIMESTAMP {NN}
}

entity address {
    + id : BIGINT {PK}
    line1 : VARCHAR(255) {NN}
    line2 : VARCHAR(255)
    city : VARCHAR(100) {NN}
    state : VARCHAR(100)
    postal_code : VARCHAR(30)
    country : VARCHAR(100) {NN}
    created_at : TIMESTAMP {NN}
    updated_at : TIMESTAMP {NN}
}

entity role {
    + id : BIGINT {PK}
    code : VARCHAR(50) {UQ, NN}
    description : VARCHAR(255)
}

entity cs_user {
    + id : BIGINT {PK}
    account_id : BIGINT {FK, NN}
    username : VARCHAR(120) {UQ, NN}
    email : VARCHAR(200) {UQ, NN}
    password_hash : VARCHAR(255) {NN}
    status : VARCHAR(32) {NN}
    last_login_at : TIMESTAMP
    created_at : TIMESTAMP {NN}
    updated_at : TIMESTAMP {NN}
}

entity user_role {
    + user_id : BIGINT {FK, NN}
    + role_id : BIGINT {FK, NN}
    assigned_at : TIMESTAMP {NN}
    {PK} user_id, role_id
}

' ==============================================================================
' PRODUCT CATALOG & PRICING
' ==============================================================================

entity product {
    + id : BIGINT {PK}
    sku : VARCHAR(100) {UQ, NN}
    name : VARCHAR(255) {NN}
    description : TEXT
    weight_grams : INT
    dimensions_mm : VARCHAR(50)
    base_price : DECIMAL(15,2) {NN}
    currency : CHAR(3) {NN}
    created_at : TIMESTAMP {NN}
    updated_at : TIMESTAMP {NN}
}

entity catalog {
    + id : BIGINT {PK}
    name : VARCHAR(150) {NN}
    description : TEXT
    valid_from : DATE {NN}
    valid_to : DATE
    created_at : TIMESTAMP {NN}
    updated_at : TIMESTAMP {NN}
}

entity catalog_product {
    + catalog_id : BIGINT {FK, NN}
    + product_id : BIGINT {FK, NN}
    display_order : INT
    {PK} catalog_id, product_id
}

entity contract {
    + id : BIGINT {PK}
    account_id : BIGINT {FK, NN}
    name : VARCHAR(150) {NN}
    valid_from : DATE {NN}
    valid_to : DATE
    status : VARCHAR(32) {NN}
    created_at : TIMESTAMP {NN}
    updated_at : TIMESTAMP {NN}
}

entity contract_price {
    + id : BIGINT {PK}
    contract_id : BIGINT {FK, NN}
    product_id : BIGINT {FK, NN}
    tier_min_qty : INT {NN}
    tier_max_qty : INT
    price : DECIMAL(15,2) {NN}
    currency : CHAR(3) {NN}
}

' ==============================================================================
' INVENTORY
' ==============================================================================

entity inventory {
    + id : BIGINT {PK}
    product_id : BIGINT {FK, NN}
    warehouse_code : VARCHAR(50) {NN}
    on_hand_qty : INT {NN}
    reserved_qty : INT {NN}
    safety_stock_qty : INT {NN}
    updated_at : TIMESTAMP {NN}
}

' ==============================================================================
' ORDER MANAGEMENT & APPROVAL WORKFLOW
' ==============================================================================

entity cs_order {
    + id : BIGINT {PK}
    account_id : BIGINT {FK, NN}
    user_id : BIGINT {FK, NN}
    status : VARCHAR(32) {NN}
    currency : CHAR(3) {NN}
    total_gross : DECIMAL(15,2) {NN}
    total_net : DECIMAL(15,2) {NN}
    total_tax : DECIMAL(15,2) {NN}
    created_at : TIMESTAMP {NN}
    updated_at : TIMESTAMP {NN}
}

entity order_line {
    + id : BIGINT {PK}
    order_id : BIGINT {FK, NN}
    product_id : BIGINT {FK, NN}
    qty : INT {NN}
    unit_price : DECIMAL(15,2) {NN}
    line_total : DECIMAL(15,2) {NN}
    tax_amount : DECIMAL(15,2) {NN}
}

entity approval_workflow {
    + id : BIGINT {PK}
    order_id : BIGINT {FK, NN}
    started_at : TIMESTAMP {NN}
    completed_at : TIMESTAMP
    status : VARCHAR(32) {NN}
}

entity approval_step {
    + id : BIGINT {PK}
    workflow_id : BIGINT {FK, NN}
    role_id : BIGINT {FK, NN}
    step_order : INT {NN}
    approver_user_id : BIGINT
    approved_at : TIMESTAMP
    status : VARCHAR(32) {NN}
}

' ==============================================================================
' PAYMENT & FINANCIAL RECONCILIATION
' ==============================================================================

entity payment {
    + id : BIGINT {PK}
    order_id : BIGINT {FK, NN}
    account_id : BIGINT {FK, NN}
    payment_method : VARCHAR(50) {NN}
    amount : DECIMAL(15,2) {NN}
    currency : CHAR(3) {NN}
    status : VARCHAR(32) {NN}
    initiated_at : TIMESTAMP {NN}
    settled_at : TIMESTAMP
}

entity payment_transaction {
    + id : BIGINT {PK}
    payment_id : BIGINT {FK, NN}
    gateway_reference : VARCHAR(120)
    txn_type : VARCHAR(50) {NN}  -- AUTH, CAPTURE, REFUND
    amount : DECIMAL(15,2) {NN}
    currency : CHAR(3) {NN}
    success : BOOLEAN {NN}
    response_code : VARCHAR(50)
    response_message : VARCHAR(255)
    processed_at : TIMESTAMP {NN}
}

' ==============================================================================
' AUDIT & LOGGING
' ==============================================================================

entity audit_log {
    + id : BIGINT {PK}
    entity_name : VARCHAR(120) {NN}
    entity_id : BIGINT
    action : VARCHAR(50) {NN}       -- INSERT, UPDATE, DELETE
    performed_by : BIGINT {FK}
    old_value : TEXT
    new_value : TEXT
    performed_at : TIMESTAMP {NN}
}

' ==============================================================================
' RELATIONSHIPS
' ==============================================================================

' ACCOUNT & ADDRESS
account::billing_address_id }--|| address : "billing_address_id"
account::shipping_address_id }--|| address : "shipping_address_id"
account::parent_account_id }--|| account : "parent_account_id"

' ACCOUNT / USER / ROLE
account ||--o{ cs_user : "has users"
cs_user ||--o{ user_role : ""
role ||--o{ user_role : ""
cs_user::id }--o| audit_log::performed_by

' CATALOG
catalog ||--o{ catalog_product
product ||--o{ catalog_product

' CONTRACT & PRICING
account ||--o{ contract
contract ||--o{ contract_price
product ||--o{ contract_price

' INVENTORY
product ||--o{ inventory

' ORDERS
account ||--o{ cs_order
cs_user ||--o{ cs_order
cs_order ||--o{ order_line
product ||--o{ order_line

' APPROVAL WORKFLOW
cs_order ||--|| approval_workflow
approval_workflow ||--o{ approval_step
role ||--o{ approval_step
cs_user ||--o{ approval_step : "approver_user_id"

' PAYMENTS
cs_order ||--|| payment
account ||--o{ payment
payment ||--o{ payment_transaction

' AUDIT (generic relation to all entities via (entity_name, entity_id) pair)
note "audit_log links to any domain object by storing its table\nname and primary key value, allowing polymorphic history tracking." as N1
audit_log .. N1

' ==============================================================================
' NOTES
' ==============================================================================
note top of account
  Accounts can be nested to model corporate
  hierarchies (e.g., HQ -> Regional -> Store).
end note

note top of contract
  Contract-driven pricing overrides base or tier
  pricing and is scoped to an Account.
end note

@enduml